--- a/app/root/content/grid-test.html
+++ b/app/root/content/grid-test.html
@@ -1,10 +1,13 @@
 <div class="container container-2x">
+	<div class="container container-xs">
+		testconteiner
+	</div>
 	<div class="row">
 		<div class="column sm-col-11 md-col-11 lg-col-11 xl-col-12">
 			<h1 class="">Markus Morley</h1>
 		</div>
 		<div class="column col-6 xl-col-10">col-6</div>
-		<div class="column bg-primary col-3 xl-show">col-3</div>
+		<div class="column bg-primary col-3 lg-hide">col-3</div>
 		<div class="column col-2">col-2</div>
 		<div class="column col-1">col-1</div>
 	</div>
@@ -12,8 +15,8 @@
 		<div class="column col-2">
 		<div class="bg-gray docs-block">col-2</div>
 		</div>
-		<div class="column xs-col-4">
-		<div class="bg-secondary text-primary docs-block">col-4dddddsssssssssssssddddddddcol-mx-auto</div>
+		<div class="column xs-col-4 col-auto">
+		<div class="bg-secondary text-primary docs-block">col-4dddddhgkhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgddddddddcol-mx-auto</div>
 		</div>
 	</div>
 </div>
