--- a/app/root/content/paralax.html
+++ b/app/root/content/paralax.html
@@ -1,9 +1,9 @@
 
 <div id="parallax-bg-3" class="parallax-bg" data-speed=".75">
-  <div id="bg-3-1">test1</div>
-  <div id="bg-3-2">test2</div>
-  <div id="bg-3-3">test3</div>
-  <div id="bg-3-4">test4</div>
+  <div id="bg-3-1"></div>
+  <div id="bg-3-2"></div>
+  <div id="bg-3-3"></div>
+  <div id="bg-3-4"></div>
 </div>
 
 <div id="parallax-bg-2" class="parallax-bg" data-speed=".4">
