added photography sectopn

--- a/app/root/content/about.html
+++ b/app/root/content/about.html
@@ -1,64 +1,23 @@
 
 <div class="container">
-	<h1 class="vita">Hi, I'm Markus Morley. I'm a Designer. Living and working in Offenbach am main</h1>
 
-	<!-- <img src="src/assets/img/vita.png" class="box__image img-responsive" alt="Work image"> -->
-	<img src="src/assets/img/about/about_mm.jpg" class="img img-responsive"  alt="Markus Morley">
-	<img src="src/assets/img/ui/logo.gif" class="box__image img-responsive" alt="Work image">
-	<blockquote>
-		<p>The advance of technology is based on making it fit in so that you don't really even notice it, so it's part of everyday life. </p>
-		<cite>- Bill Gates</cite>
-	</blockquote>
-	<table class="table table-striped table-hover">
-		<thead>
-			<tr>
-				<th></th>
-				<th></th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr class="">
-				<td>14 October 1994</td>
-				<td>The Shawshank Redemption</td>
-				<td>Crime, Drama</td>
-			</tr>
-			<tr class="">
-				<td>14 October 1994</td>
-				<td>The Shawshank Redemption</td>
-				<td>Crime, Drama</td>
-			</tr>
-			<tr class="">
-				<td>14 October 1994</td>
-				<td>The Shawshank Redemption</td>
-				<td>Crime, Drama</td>
-			</tr>
-			<tr class="">
-				<td>14 October 1994</td>
-				<td>The Shawshank Redemption</td>
-				<td>Crime, Drama</td>
-			</tr>
-			<tr class="">
-				<td>14 October 1994</td>
-				<td>The Shawshank Redemption</td>
-				<td>Crime, Drama</td>
-			</tr>
-			<tr class="">
-				<td>14 October 1994</td>
-				<td>The Shawshank Redemption</td>
-				<td>Crime, Drama</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
+	<div class="row">
+		<div class="column  xl-col-3">
+			<h1 class="vita">Hi, I'm Markus Morley. I'm a Designer. Living and working in Offenbach am main</h1>
 
-<div id="about" class="container_16 clearfix">
-		<div id="headshot" class="grid_6">
+			<img src="src/assets/img/about/about_mm.jpg" class="img-responsive"  alt="Markus Morley">
+			<img src="src/assets/img/ui/logo.gif" class="img-responsive" alt="Work image">
+			<img class="img-responsive" src="src/assets/img/tokyo/taatoo/Markus_Morley_Tokyo_day_006-8204.jpg" alt="OS X Yosemite">
+		</div>
+		<div class="column  xl-col-9">
+			<img class="img-responsive" src="src/assets/img/tokyo/taatoo/Markus_Morley_Tokyo_day 006-8024.jpg" alt="OS X Yosemite">
+		</div>
+	</div>
 
-			<h2>Markus Morley</h2>
-	  </div><!-- // headshot -->
 
-			<h1>Hi, I'm Markus Morley.  I'm a photographer. Living and working in frankfurt am main</h1>
+
+	<div class="row">
+		<div class="column  xl-col-3">
 
 
 <div id="about" class="container_16 clearfix">
@@ -206,3 +165,14 @@
                 <p>Die Nutzung von angegebenen Kontaktdaten wie Postanschriften, Telefon-und Faxnummern sowie E-Mail-Adressen zu Marketing-Zwecken ist verboten.</p>
                 <p><u>© 2020 Markus Morley</u></p>
             </div>
+
+
+
+
+
+		</div>
+	</div>
+
+
+
+</div
