--- a/app/root/content/paralax_photography_bw.html
+++ b/app/root/content/paralax_photography_bw.html
@@ -1,16 +1,16 @@
 
 
 
-<div class="paralax_photography">
+<div class="paralax_photography_bw">
   <div id="parallax-bg-3" class="parallax-bg" data-speed=".75">
-    <div id="bg-3-1"> <a href="./photography_bw.html">link</a></div>
+    <div id="bg-3-1"></div>
     <div id="bg-3-2"></div>
-    <div id="bg-3-3"><a href="./photography_blacker.html">link</a></div>
+    <div id="bg-3-3"></div>
     <div id="bg-3-4"></div>
-    <div id="bg-3-5"><a href="./photography_portrait.html">link</a></div>
+    <div id="bg-3-5"></div>
     <div id="bg-3-6"></div>
     <div id="bg-3-7"></div>
-    <div id="bg-3-8"><a href="./photography_bw.html">link</a></div>
+    <div id="bg-3-8"></div>
   </div>
 
   <div id="parallax-bg-2" class="parallax-bg" data-speed=".4">
