--- a/app/root/content/about.html
+++ b/app/root/content/about.html
@@ -1,174 +1,222 @@
+<!-- <div class="container container-xl">
+  <div class="row">
+    <div class="column xs-col-3 xl-col-9">
+      <img class="img-responsive" src="src/assets/img/tokyo/living/Markus_Morley_Tokyo_day_003-4905.jpg"
+        alt="Markus Morley">
+    </div>
+    <div class="column xs-col-12 xl-col-3">
+      <img class="img-responsive" src="src/assets/img/tokyo/buildings/Markus_morley_tokyo_day_005-6633.jpg"
+        alt="Markus Morley">
+    </div>
+  </div>
+</div> -->
 
-<div class="container">
+<div class="container container-xl">
+  <div class="row">
+    <div class="column xl-col-3">
+      <h1 class="vita">Hi, I'm Markus Morley. I'm a Designer. Living and working in Offenbach am main</h1>
+      <img src="src/assets/img/about/about_mm.jpg" class="img-responsive" alt="Markus Morley">
+      <img class="img-responsive" src="src/assets/img/tokyo/taatoo/Markus_Morley_Tokyo_day_006-8204.jpg"
+        alt="Markus Morley">
+    </div>
+    <div class="column xl-col-9">
+      <img class="img-responsive" src="src/assets/img/tokyo/taatoo/Markus_Morley_Tokyo_day 006-8024.jpg"
+        alt="Markus Morley">
+    </div>
+  </div>
+  <div class="column xl-col-12">
+    <div id="about">
+      <div id="vita" class="">
+        <div class="">
+          <table width="652" border="0" cellpadding="5" cellspacing="0">
+            <tbody>
+              <tr>
+                <td colspan="2">
+                  <img src="src/assets/img/ui/logo.gif" class="img-responsive" alt="Work image">
+                  <h2 class="resume">Resume / Vita</h2>
+                </td>
+              </tr>
+              <tr>
+                <td width="26" valign="top" class="resume"> 1981</td>
+                <td width="606" valign="top" class="resume"><em>Born in
+                    Flörsheim a. M</em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume"> 2008</td>
+                <td valign="top" class="resume"><em>Lives and works as</em> - Designer  <em>in
+                    Frankfurt a.M.</em></td>
+              </tr>
+            </tbody>
+          </table>
+          <table width="1280" border="0" cellspacing="0" cellpadding="5">
+            <tbody>
+              <tr>
+                <td colspan="2">
+                  <h2 class="resume">Education</h2>
+                </td>
+              </tr>
 
-	<div class="row">
-		<div class="column  xl-col-3">
-			<h1 class="vita">Hi, I'm Markus Morley. I'm a Designer. Living and working in Offenbach am main</h1>
-
-			<img src="src/assets/img/about/about_mm.jpg" class="img-responsive"  alt="Markus Morley">
-			<img src="src/assets/img/ui/logo.gif" class="img-responsive" alt="Work image">
-			<img class="img-responsive" src="src/assets/img/tokyo/taatoo/Markus_Morley_Tokyo_day_006-8204.jpg" alt="OS X Yosemite">
-		</div>
-		<div class="column  xl-col-9">
-			<img class="img-responsive" src="src/assets/img/tokyo/taatoo/Markus_Morley_Tokyo_day 006-8024.jpg" alt="OS X Yosemite">
-		</div>
-	</div>
-
-
-
-	<div class="row">
-		<div class="column  xl-col-3">
-
-
-<div id="about" class="container_16 clearfix">
-
-        	<div id="vita" class="grid_8">
-    <div id="headshot" class="grid_6"> <table width="652" border="0" cellpadding="5" cellspacing="0">
-   <tbody><tr>
-     <td colspan="2"><h2 class="resume">Resume / Vita</h2></td>
-   </tr><tr>
-     <td width="26" valign="top" class="resume"> 1981</td>
-     <td width="606" valign="top" class="resume"><em>Born</em> - 12:03 pm <em> on the first december snow,  Flörsheim a. M</em></td>
-   </tr>
-   <tr>
-     <td valign="top" class="resume"> 2008</td>
-     <td valign="top" class="resume"><em>Lives and works as</em> - Photographer <em>in Bockenheim,  Frankfurt a.M.</em></td>
-   </tr>
- </tbody></table>
- <table width="1280" border="0" cellspacing="0" cellpadding="5">
-   <tbody><tr>
-		<td colspan="2"><h2 class="resume">Education</h2></td>
-
-
-
-     </tr><tr>
-     <tr>
-		<td valign="top" class="resume">
-        2010-2017  </td>
-		<td valign="top" class="resume"><em>Visuele Kommunikation</em> - Photography|Painting <em> HFG,  Offenbach a.M.</em></td>
-	  </tr>
-     <tr>
-		<td valign="top" class="resume">
-        2008-2014  </td>
-		<td valign="top" class="resume"><em>Visuele Kommunikation</em> - Photography|Painting <em> HFG,  Offenbach a.M.</em></td>
-	  </tr>
-       <td valign="top" class="resume">
-         2006-2008  </td>
-       <td valign="top" class="resume"><em>Photographer</em> - Photography <em> Peter Behrens Schule,  Darmstadt</em></td>
-     </tr>
-
-
-     <tr><td colspan="2"></td></tr>
-   <tr>
-		<td colspan="2"><h2 class="resume">Group Exhibitions</h2></td>
-</tr><tr>
-		<td valign="top" class="resume">
-        2012  </td>
-		<td valign="top" class="resume"> 8 portrait fotoschau Deutschlands<em> </em>- Photography - <em>Landtag, Dresden </em><em><br>
-		</em></td>
-	  </tr>
-      <tr>
-		<td valign="top" class="resume">
-          </td>
-		<td valign="top" class="resume"> Ein Stück vom Kuchen<em> </em>- Photography - <em>Kunstverein Lola Montez, Frankfurt </em><em><br>
-		</em></td>
-	  </tr>
-      <tr>
-		<td valign="top" class="resume">
-        2011  </td>
-		<td valign="top" class="resume"><em>Satelite</em> - Photography - <em>Satelite, Berlin</em><em><br>
-		</em></td>
-	  </tr>
-
-     <tr>
-		<td valign="top" class="resume">&nbsp;</td>
-		<td valign="top" class="resume"><em>Und das soll Kunst sein</em> - Paintink - <em>Kunstverein Lola Montez, Frankfurt </em></td>
-	  </tr>
-
-     <tr>
-		<td valign="top" class="resume">&nbsp;
-
-       </td>
-		<td valign="top" class="resume"><em>Gallus Calling</em> - Paintink - <em>Projektraum Balken, Frankfurt</em></td>
-	  </tr>
-
-     <tr>
-		<td valign="top" class="resume">2010
-
-       </td>
-		<td valign="top" class="resume"><em>V2</em> - Photography - <em> SIxt Gallusviertel,  Frankfurt</em></td>
-	  </tr>
-
-     <tr>
-		<td valign="top" class="resume">
-        2009  </td>
-		<td valign="top" class="resume"><em>V1</em> - Soundperformance - <em> Landungsbrücken,  Frankfurt </em></td>
-	  </tr>
-
-     <tr>
-		<td valign="top" class="resume">&nbsp;
-
-       </td>
-		<td valign="top" class="resume"><em>The City Loves You</em> - Photography - <em>Kunstverein Lola Montez, Frankfurt</em></td>
-	  </tr>
-
-
-
-     <tr>
-		<td valign="top" class="resume">
-        2008  </td>
-		<td valign="top" class="resume"><em>faites le jeu!</em> - Paintink - <em> besetztes Haus Westend,  Frankfurt<br>
-		</em></td>
-	  </tr>
-
-
- </tbody></table>
-            </div><!-- // headshot -->
-
-
-            </div><!-- end #vita .grid_6 -->
-
-            <div id="headshot" class="grid_8">
-            	<h1>Hi, Ich bin Markus Morley, Fotograf. Lebe und arbeite in Frankfurt am Main</h1>
-                <p><span class="grid_8"><img src="images/sample/about_mm.jpg" width="340" height="420" alt="Markus Morley"></span>
-                </p><p>Nach einer <em>Ausbildung zum Fotografen</em> 2003, arbeitete ich als<em> Fester Fotoassistent</em> für <a href="http://www.berndmayer.com" target="_blank">Bernd Mayer.</a> Heute 2007 arbeite ich als <em>Fotograf   </em> für viele Fotografen und Fotostudios im Rhein Main Gebiet. Seit 2008 Studiere ich <em>Visuelle Kommunikation</em> an der <a href="http://www.hfg-offenbach.de/">Hochschule für Gestaltung Offenbach am Main</a>.</p>
-                <br>
-
-                <p><strong>CONTACT</strong></p>
-              <em>
-                <p>Markus Morley<br>
-                  Basaltstrasse 42<br>
-      60487 Frankfurt am Main</p></em>
-                  <p>
-                  Mobile: +49 176 235 600 96</p>
-                <p>Mail:&nbsp;<a href="mailto:m-morley@gmx.de">m-morley [at] gmx [dot] de</a></p>
-                 <br>
-                  <br>
-            </div><!-- end #headshot .grid_6 -->
-
-    	</div>
-            	<p></p>
-
-
-              <p>CONTACT</p>
-                <p>Markus Morley<br>
-                  Mittelseestr. 33<br>
-                  63065 Offenbach am Main</p>
-                <p>Mail:&nbsp;<a href="mailto:m-morley@gmx.de">m-morley [at] gmx [dot] de</a></p>
-                <p><u>Imprint</u><br>
-                  All rights reserved. The copyright for any and all material published on this website is reserved. Any duplication or use of objects such as but not limited to images, videos, diagrams, audio files, and texts, is not permitted without express written permission.</p>
-                <p>The owner of this website is not responsible for any contents linked or referred to from this website, and accepts no responsibility for its presentation in the websites of third parties.</p>
-                <p>The use of published postal addresses, telephone or fax numbers and email addresses for marketing purposes is prohibited.</p>
-                <p><u>Impressum</u><br>
-                  Alle Rechte vorbehalten. Das Copyright für sämtliche Materialien auf dieser Website liegt bei Markus Morley. Eine Vervielfältigung oder Verwendung sämtlicher Abbildungen, Videos, Grafiken, Audio-Dateien und Texte usw. ist ohne ausdrückliche schriftliche Genehmigung nicht gestattet.</p>
-                <p>Markus Morley ist nicht verantwortlich für den Inhalt verlinkter externer oder indirekten Verweise auf dieser Website und übernimmt keine Verantwortung für Darstellung, Inhalte oder irgendeine Verbindung zu Markus Morley auf Webseiten Dritter.</p>
-                <p>Die Nutzung von angegebenen Kontaktdaten wie Postanschriften, Telefon-und Faxnummern sowie E-Mail-Adressen zu Marketing-Zwecken ist verboten.</p>
-                <p><u>© 2020 Markus Morley</u></p>
-            </div>
-
-
-
-
-
-		</div>
-	</div>
+              <tr>
+                <td valign="top" class="resume">
+                  2017-2020 </td>
+                <td valign="top" class="resume"><em>UX FRONTEND Designer/Developer</em> Frontend developing, UX Design and prototyping <em>Comwrap -
+                    Frankfurt a.M.</em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2010-2017 </td>
+                <td valign="top" class="resume"><em>Photographer / Digital Operator</em> -  <em>
+                    Frankfurt a.M.</em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2008-2014 </td>
+                <td valign="top" class="resume"><em>Visuele Kommunikation</em> - Photography|Painting <em> - HFG,
+                    Offenbach a.M.</em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2008-2014 </td>
+                <td valign="top" class="resume"><em>Fotoassistent</em> - Photography <em> - Bernd Mayer,
+                    Frankfurt a.M.</em></td>
+              </tr>
+              <td valign="top" class="resume">
+                2006-2008 </td>
+              <td valign="top" class="resume"><em>Photographer</em> - Photography <em> Peter Behrens Schule -
+                  Darmstadt</em></td>
+              </tr>
+              <tr>
+                <td colspan="2"></td>
+              </tr>
+              <tr>
+                <td colspan="2">
+                  <h2 class="resume">Group Exhibitions</h2>
+                </td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2019 </td>
+                  <td valign="top" class="resume"> Matias hidalgo <em> </em>- Photography - <em>New Talents - Vogue.it </em><em><br>
+                  </em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2019 </td>
+                  <td valign="top" class="resume">Matias hidalgo <em> </em>- Photography - <em>Kunstverein Lola
+                    Montez, Frankfurt </em><em><br>
+                  </em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2013 </td>
+                  <td valign="top" class="resume"> Ein Stück vom Kuchen<em> </em>- Photography - <em>Kunstverein Lola
+                    Montez, Frankfurt </em><em><br>
+                  </em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2012 </td>
+                <td valign="top" class="resume"> 8 portrait fotoschau Deutschlands<em> </em>- Photography -
+                  <em>Landtag, Dresden </em><em><br>
+                  </em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                </td>
+                <td valign="top" class="resume"> Ein Stück vom Kuchen<em> </em>- Photography - <em>Kunstverein Lola
+                    Montez, Frankfurt </em><em><br>
+                  </em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2011 </td>
+                <td valign="top" class="resume"><em>Satelite</em> - Photography - <em>Satelite, Berlin</em><em><br>
+                  </em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">&nbsp;</td>
+                <td valign="top" class="resume"><em>Und das soll Kunst sein</em> - Paintink - <em>Kunstverein Lola
+                    Montez, Frankfurt </em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">&nbsp;
+                </td>
+                <td valign="top" class="resume"><em>Gallus Calling</em> - Paintink - <em>Projektraum Balken,
+                    Frankfurt</em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">2010
+                </td>
+                <td valign="top" class="resume"><em>V2</em> - Photography - <em> SIxt Gallusviertel, Frankfurt</em>
+                </td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2009 </td>
+                <td valign="top" class="resume"><em>V1</em> - Soundperformance - <em> Landungsbrücken, Frankfurt </em>
+                </td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">&nbsp;
+                </td>
+                <td valign="top" class="resume"><em>The City Loves You</em> - Photography - <em>Kunstverein Lola
+                    Montez, Frankfurt</em></td>
+              </tr>
+              <tr>
+                <td valign="top" class="resume">
+                  2008 </td>
+                <td valign="top" class="resume"><em>faites le jeu!</em> - Paintink - <em> besetztes Haus Westend,
+                    Frankfurt<br>
+                  </em></td>
+              </tr>
+            </tbody>
+          </table>
+        </div><!-- // headshot -->
+      </div><!-- end #vita .grid_6 -->
+      <div id="headshot" class="grid_8">
+        <h1>Hi, Ich bin Markus Morley, Fotograf. Lebe und arbeite in Frankfurt am Main</h1>
+        <p><span class="grid_8"><img src="images/sample/about_mm.jpg" width="340" height="420"
+              alt="Markus Morley"></span>
+        </p>
+        <p>Nach einer <em>Ausbildung zum Fotografen</em> 2003, arbeitete ich als<em> Fester Fotoassistent</em> für <a
+            href="http://www.berndmayer.com" target="_blank">Bernd Mayer.</a> Heute 2020 arbeite ich als <em>UX Designer
+          </em> bei Comwrap.  2008-2014 Studiertr ich <em>Visuelle
+            Kommunikation</em> an der <a href="http://www.hfg-offenbach.de/">Hochschule für Gestaltung Offenbach am
+            Main</a>.</p>
+        <br>
+        <p><strong>CONTACT</strong></p>
+        <em>
+          <p>Markus Morley<br>
+            Basaltstrasse 42<br>
+            60487 Frankfurt am Main</p>
+        </em>
+        <p>
+          Mobile: +49 177 371 679 1</p>
+        <p>Mail:&nbsp;<a href="mailto:m-morley@gmx.de">m-morley [at] gmx [dot] de</a></p>
+        <br>
+        <br>
+      </div><!-- end #headshot .grid_6 -->
+    </div>
+  </div>
+  <div class="column xs-col-12 xl-col-12">
+    <p></p>
+    <p><u>Imprint</u><br>
+      All rights reserved. The copyright for any and all material published on this website is reserved. Any
+      duplication or use of objects such as but not limited to images, videos, diagrams, audio files, and texts, is
+      not permitted without express written permission.</p>
+    <p>The owner of this website is not responsible for any contents linked or referred to from this website, and
+      accepts no responsibility for its presentation in the websites of third parties.</p>
+    <p>The use of published postal addresses, telephone or fax numbers and email addresses for marketing purposes is
+      prohibited.</p>
+    <p><u>Impressum</u><br>
+      Alle Rechte vorbehalten. Das Copyright für sämtliche Materialien auf dieser Website liegt bei Markus Morley.
+      Eine Vervielfältigung oder Verwendung sämtlicher Abbildungen, Videos, Grafiken, Audio-Dateien und Texte usw. ist
+      ohne ausdrückliche schriftliche Genehmigung nicht gestattet.</p>
+    <p>Markus Morley ist nicht verantwortlich für den Inhalt verlinkter externer oder indirekten Verweise auf dieser
+      Website und übernimmt keine Verantwortung für Darstellung, Inhalte oder irgendeine Verbindung zu Markus Morley
+      auf Webseiten Dritter.</p>
+    <p>Die Nutzung von angegebenen Kontaktdaten wie Postanschriften, Telefon-und Faxnummern sowie E-Mail-Adressen zu
+      Marketing-Zwecken ist verboten.</p>
+    <!-- <p><u>© 2020 Markus Morley</u></p> -->
+  </div>
+</div>
