updated bw photography

--- a/app/root/content/photography_bw.html
+++ b/app/root/content/photography_bw.html
@@ -1,4 +1,8 @@
 
 <div class="container">
 	<h1 class="vita">BLACK AND WHITE</h1>
+	<h2>Monochrome photography is photography where each position on an image can record and show a different amount of light, but not a different hue. It includes all forms of black-and-white photography, which produce images containing tones of neutral grey ranging from black to white.</h2>
+	<p>
+
+	</p>
 </div>
