added index layout

--- a/app/root/content/layout_index.html
+++ b/app/root/content/layout_index.html
@@ -1,23 +1,37 @@
+<div class="index_onepager__hero_text">
+	<h2 class="heading">
+		<span class="theme-color">
+			My abillity to
+			<span class="text-primary">Overview Complex Situation</span> will
+			help you to get inbound with
+			<span class="text-primary">User Centrification</span>
+		</span>
+	</h2>
+</div>
+
 <div class="index_onepager">
 	<div class="container container-xl">
 		<div class="row">
-			<div class="column xs-col-12 xl-col-12">
-				<h5 class="heading heading-h5 red-color-2">My Skills</h5>
-			</div>
+			<div class="column xs-col-12 xl-col-12"></div>
 
-			<div class="column xs-col-12 sm-col-6 xl-col-7">
+			<div class="column xs-col-12 sm-col-12 md-col-12 xl-col-7">
 				<div class="index_onepager__skills_wrapper">
 					<h3 class="h3">
-						i love design &amp; build ux prototypes, develop and
-						create
-						<span class="theme-color">digital projects</span> for a
-						modern design and large scale approach
+						Hi, i'm Markus Morley. Desiging, living and working in
+						Frankfurt am Main. i love design. build ux prototypes.
+						develop frontend components for atomic design. develop
+						and create
+						<span class="theme-color">digital projects</span>
+						for a large scale approach
 					</h3>
 				</div>
 			</div>
 
-			<div class="column xs-col-12 sm-col-6 col-mx-auto xl-col-4">
+			<div
+				class="column xs-col-12 sm-col-12 md-col-12 col-mx-auto xl-col-4"
+			>
 				<div class="index_onepager__progress_wrapper">
+					<h5 class="heading heading-h5 red-color-2">My Skills</h5>
 					<!-- Start Single Progress Charts -->
 					<div class="index_onepager__progress_charts">
 						<h6 class="heading heading-h6">
@@ -119,14 +133,263 @@
 
 	<div class="container container-xl">
 		<div class="row">
+			<div class="column xs-col-12 md-col-6 xl-col-6">
+				<img
+					class="img-responsive"
+					src="src/assets/img/photography/black/Black_007.jpg"
+					alt="Markus Morley"
+				/>
+			</div>
+
+			<div class="column xs-col-12 md-col-6 xl-col-6 about-content">
+				<div class="about-title">
+					<h2>About Me</h2>
+					<p>You don't take a photograph, you make it.</p>
+				</div>
+				<div class="row">
+					<div class="column md-col-6 xl-col-6 about-text">
+						<p>
+							Photographers tend not to photograph what they can’t
+							see, which is the very reason one should try to
+							attempt it. Otherwise we’re going to go on forever
+							just photographing more faces and more rooms and
+							more places. Photography has to transcend
+							description. It has to go beyond description to
+							bring insight into the subject, or reveal the
+							subject, not as it looks, but how does it feel. The
+							camera would miss it all. There are no bad pictures;
+							that's just how your face looks sometimes. A picture
+							is a secret about a secrets, the more it tells you
+							the less you know, and feel.
+						</p>
+					</div>
+					<div class="column xl-col-6 about-text">
+						<p>
+							Photography is a magical kind of art that allows
+							people to preserve time and moments, and to describe
+							the world the way they see it and loves.
+						</p>
+						<p>
+							For me, the subject of the picture is always more
+							important than the picture. A photograph is a click
+							away. A good photographer is a hundred clicks away
+							and a better one, a thousand clicks away for
+							photography love photos and we make.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="divider"></div>
+	<div class="container container-2x my-2">
+		<div class="row">
+			<div class="column xs-col-12 xl-col-3 about-content">
+				<img
+					class="img-responsive"
+					src="src/assets/img/paralax/yelrom_1.png"
+					alt="Markus Morley"
+				/>
+			</div>
+			<div class="column xs-col-12 xl-col-6 about-content">
+				<img
+					class="img-responsive"
+					src="src/assets/img/paralax/yelrom_1.png"
+					alt="Markus Morley"
+				/>
+			</div>
+			<div class="column xs-col-12 xl-col-3 about-content">
+				<img
+					class="img-responsive"
+					src="src/assets/img/paralax/yelrom_1.png"
+					alt="Markus Morley"
+				/>
+			</div>
+			<div class="column xs-col-12 xl-col-5 about-content">
+				<div class="about-title">
+					<h2>looking forward to</h2>
+					<p>You don't take a photograph, you make it.</p>
+				</div>
+				<div class="row">
+					<div class="column xs-col-12 xl-col-6 col-12 about-text">
+						<p>
+							Photographers tend not to photograph what they can’t
+							see, which is the very reason one should try to
+							attempt it. Otherwise we’re going to go on forever
+							just photographing more faces and more rooms and
+							more places. Photography has to transcend
+							description. It has to go beyond description to
+							bring insight into the subject, or reveal the
+							subject, not as it looks, but how does it feel. The
+							camera would miss it all. There are no bad pictures;
+							that's just how your face looks sometimes. A picture
+							is a secret about a secrets, the more it tells you
+							the less you know, and feel.
+						</p>
+						<p>
+							He was right. John Loengard, the picture editor at
+							Life, always used to tell me, ”If you want something
+							to look interesting, don’t light all of it.Taking
+							pictures is savoring life intensely, every hundredth
+							of a second. For me, the camera is a sketch book, an
+							instrument of the best intuitions.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="column grid-lg xl-col-7 xs-col-12">
+				<img
+					class="img-responsive"
+					src="src/assets/img/photography/black/Black_029.jpg"
+					alt="Markus Morley"
+				/>
+			</div>
+		</div>
+	</div>
+
+	<div class="container container-xl">
+		<div class="sec-title">
+			<h2>Portfolio</h2>
+			<p>
+				this is an part of my portfolio
+			</p>
+		</div>
+		<div class="row lt-news-items">
+			<div class="column xs-col-12 md-col-6 xl-col-6">
+				<div class="media">
+					<div class="media-left">
+						<img
+							class="img-responsive"
+							src="src/assets/img/tokyo/buildings/Markus_morley_tokyo_day_005-6633.jpg"
+							alt=""
+						/>
+					</div>
+					<div class="media-body">
+						<h6 class="title-tag">Photography Ux-Design</h6>
+						<h3>
+							Scince fiction User expirences in tokyo
+						</h3>
+						<p>
+							There is in fact something obscene and sinister
+							about photography, a desire to imprison, to
+							incorporate, a sexual intensity of pursuit...
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="column xs-col-12 md-col-6 xl-col-6">
+				<div class="media">
+					<div class="media-left">
+						<img
+							class="img-responsive"
+							src="src/assets/img/photography/black/Black_004.jpg"
+							alt=""
+						/>
+					</div>
+					<div class="media-body">
+						<h6 class="title-tag">Lifestyle</h6>
+						<h3>
+							The camera would miss it all. A magnificent picture
+							is never worth...
+						</h3>
+						<p>
+							The camera would miss it all. A magnificent picture
+							is never worth a thousand perfect words. Ansel Adams
+							can be a great artist, but he
+						</p>
+					</div>
+				</div>
+				<div class="media">
+					<div class="media-left">
+						<img
+							class="img-responsive"
+							src="src/assets/img/photography/blacker/photography_blackerthandays_016.jpg"
+							alt=""
+						/>
+					</div>
+					<div class="media-body">
+						<h6 class="title-tag">Photography</h6>
+						<h3>
+							Blacker than days
+						</h3>
+						<p>
+							Seperating the object from the background to see the
+							lightning of this moment without diturbing bright or
+							cloudy skys
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row lt-news-items">
+			<div class="column xs-col-12 md-col-6 xl-col-6">
+				<div class="media">
+					<div class="media-left">
+						<img
+							class="img-responsive"
+							src="src/assets/img/photography/portrait/Portrait_016.jpg"
+							alt=""
+						/>
+					</div>
+					<div class="media-body">
+						<h6 class="title-tag">Photography</h6>
+						<h3>
+							Portraits
+						</h3>
+						<p>
+							There is in fact something obscene and sinister
+							about photography, a desire to imprison, to
+							incorporate, a sexual intensity of pursuit...
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="column xs-col-12 md-col-6 xl-col-6">
+				<div class="media">
+					<div class="media-left">
+						<img
+							class="img-responsive"
+							src="src/assets/img/tokyo/fish/IMG_0747.jpg"
+							alt=""
+						/>
+					</div>
+					<div class="media-body">
+						<h6 class="title-tag">Lifestyle</h6>
+						<h3>
+							The camera would miss it all. A magnificent picture
+							is never worth...
+						</h3>
+						<p>
+							The camera would miss it all. A magnificent picture
+							is never worth a thousand perfect words. Ansel Adams
+							can be a great artist, but he
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="see-btn">
+			<a href="#" class="btn load-btn">LOAD MORE</a>
+		</div>
+	</div>
+
+	<div class="container container-xl">
+		<div class="row">
 			<div class="column xs-col-12 xl-col-12">
 				<!-- <img class="img-responsive" src="src/assets/img/tokyo/Markus_Morley_Tokyo_day_003-3969.jpg" alt="OS X Yosemite"> -->
-				<div class="index_onepager__hero_text">
+				<div
+					class="index_onepager__hero_text index_onepager__hero_text--bg_001"
+				>
 					<h2 class="heading">
 						Looking
-						<span class="theme-color"
-							>for all kinds of details.</span
-						>
+						<span class="theme-color">
+							for all kinds of details.
+						</span>
+					</h2>
+					<h2 class="heading">
+						<span class="theme-color">
+							User Expirience is everywhere
+						</span>
 					</h2>
 				</div>
 			</div>
@@ -148,5 +411,226 @@
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div class="section-case-studies-list__list-wrap">
+	<div class="section-case-studies-list__list">
+		<h4>Automotive</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/faraday-future/"
+			>Faraday Future</a
+		>
+		<div
+			class="section-case-studies-list__link section-case-studies-list__link--inactive"
+		>
+			Mercedes-Benz
+		</div>
+		<div
+			class="section-case-studies-list__link section-case-studies-list__link--inactive"
+		>
+			Volkswagen
+		</div>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>Financial Services &amp; Insurance</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/abn-amro/"
+			>ABN AMRO</a
+		>
+		<div
+			class="section-case-studies-list__link section-case-studies-list__link--inactive"
+		>
+			Allianz Insurance
+		</div>
+		<div
+			class="section-case-studies-list__link section-case-studies-list__link--inactive"
+		>
+			Northern Trust
+		</div>
+		<a class="section-case-studies-list__link" href="/case-studies/meag/"
+			>MEAG</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/rabobank/"
+			>Rabobank</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/silicon-valley-bank/"
+			>Silicon Valley Bank</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/wirecard/"
+			>Wirecard</a
+		><a class="section-case-studies-list__link" href="/case-studies/fbto/"
+			>FBTO</a
+		>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>Healthcare &amp; Pharma</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/helios-hospitals/"
+			>Helios Hospitals</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/alcon-wearlenses/"
+			>Alcon | Wear Lenses</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/elsevier-reaxys/"
+			>Elsevier | Reaxys</a
+		>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>Media &amp; Publishers</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/red-bull-tv/"
+			>Red Bull TV</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/the-economist/"
+			>The Economist</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/wirtschaftswoche-online/"
+			>WirtschaftsWoche Online</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/hellogiggles/"
+			>HelloGiggles</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/az-medien/"
+			>AZ Medien</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/friday-magazine/"
+			>Friday Magazine</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/vol-at-design-system/"
+		>
+			Vol.at Design System</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/nzz-bellevue/"
+			>NZZ Bellevue</a
+		>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>Information &amp; Technology</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/winestein/"
+			>WineStein</a
+		>
+		<div
+			class="section-case-studies-list__link section-case-studies-list__link--inactive"
+		>
+			Google
+		</div>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/nanoscent/"
+			>Nanoscent</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/mozilla/"
+			>Mozilla</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/elsevier-reaxys/"
+			>Elsevier | Reaxys</a
+		>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>Mass Mobility</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/amsterdam-airport-schiphol/"
+			>Amsterdam Airport Schiphol</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/ns-pro-rail/"
+			>NS ProRail</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/deutsche-bahn/"
+			>Deutsche Bahn</a
+		>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>Travel &amp; Tourism</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/amsterdam-airport-schiphol/"
+			>Amsterdam Airport Schiphol</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/ns-pro-rail/"
+			>NS ProRail</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/deutsche-bahn/"
+			>Deutsche Bahn</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/the-city-of-parma/"
+			>The City of Parma</a
+		>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>E-commerce &amp; Retail</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/alcon-wearlenses/"
+			>Alcon | Wear Lenses</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/zumtobel-group/"
+			>Zumtobel Group</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/fontshop/"
+			>FontShop</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/winestein/"
+			>WineStein</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/quooker/"
+			>Quooker</a
+		>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>Food &amp; Packaged Goods</h4>
+		<a
+			class="section-case-studies-list__link"
+			href="/case-studies/tcho-branding/"
+			>TCHO</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/tcho-milk/"
+			>TCHO Milk</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/hering-berlin/"
+			>Hering Berlin</a
+		><a
+			class="section-case-studies-list__link"
+			href="/case-studies/hering-berlin-catalog/"
+			>Hering Berlin Catalog</a
+		>
+	</div>
+	<div class="section-case-studies-list__list">
+		<h4>Construction &amp; Real Estate</h4>
+		<a class="section-case-studies-list__link" href="/case-studies/bosch/"
+			>Bosch</a
+		>
 	</div>
 </div>
