--- a/app/root/content/layout_index.html
+++ b/app/root/content/layout_index.html
@@ -315,6 +315,7 @@
 							<div class="meta-lockup-cards__category label">
 								Photography
 							</div>
+							<p></p>
 							<a class="meta-lockup-cards__title">
 								Blacker than days
 							</a>
@@ -344,11 +345,12 @@
 							class="section-projects__image section-projects__image--image_005"
 						></a>
 						<div class="meta-lockup-cards">
-							<div class="meta-lockup-cards__category">
-								Our Offices
+							<div class="meta-lockup-cards__category label">
+								Digital Painting
 							</div>
+							<p></p>
 							<a class="meta-lockup-cards__title">
-								Six locations — one global team
+								Sketchbook tour
 							</a>
 						</div>
 					</div>
@@ -360,11 +362,12 @@
 							class="section-projects__image section-projects__image--image_006"
 						></a>
 						<div class="meta-lockup-cards">
-							<div class="meta-lockup-cards__category">
-								Our Offices
+							<div class="meta-lockup-cards__category label">
+								gaming
 							</div>
+							<p></p>
 							<a class="meta-lockup-cards__title">
-								Six locations — one global team
+								Modding Fallout 4
 							</a>
 						</div>
 					</div>
